# photosite

./: .pre-commit-config.yaml  readme.md
.github/workflows/: backend-ci.yaml  cd.yaml  ci.yaml
backend/: .gitignore  .pre-commit-config.yaml  pyproject.toml  readme.md
backend/src/: main.py
backend/src/photosite_backend/: main.py  reader.py  test.py  utils.py
backend/src/photosite_backend/backends/: __init__.py  s3.py
backend/src/photosite_backend/image/: __init__.py
backend/src/photosite_backend/main/: __init__.py
backend/src/photosite_backend/manifest/: __init__.py
backend/src/photosite_backend/reader/: __init__.py  test_reader.py
backend/src/photosite_backend/tests/: __init__.py  conftest.py  test_image.py  test_main.py  test_manifest.py  test_reader.py  test_writer.py
backend/src/photosite_backend/writer/: __init__.py
backend/test/: test_main.py
frontend/: .pre-commit-config.yaml  bundle.ts  deno.json  index.html  readme.md
frontend/lint/: require_arrow_functions.ts
frontend/src/: app.tsx  app_test.ts  app_test.tsx  bundle.ts  gallery.tsx  global-jsdom.ts  index.html  main.tsx  manifest.ts
